--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ header {
     height: inherit;
 }
 .first {
-    background-image: url('../images/madederia.png');
+    background-image: url('../images/rebee.png');
     background-size: cover;
     background-position: center;
 }
